--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Ensure all tags are fetched
-
+        
       - name: Docker login
         uses: docker/login-action@v3
         with:
@@ -69,7 +69,8 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           # path to the Dockerfile
+          file: Dockerfile-cts
           context: .
-          tags: ${{ secrets.REGISTRY_URL }}/getapp-dev/getmap-node:${{ needs.calculate_new_tag.outputs.tag }}
+          tags: ${{ secrets.REGISTRY_URL }}/getapp-dev/project-management:${{ needs.calculate_new_tag.outputs.tag }}
           push: true
           build-args: IMG_TAG=${{ needs.calculate_new_tag.outputs.tag }}
