--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,8 +73,8 @@ jobs:
           context: .
           tags: ${{ secrets.REGISTRY_URL }}/getapp-dev/project-management:${{ needs.calculate_new_tag.outputs.tag }}
           push: true
-          build-args: IMG_TAG=${{ needs.calculate_new_tag.outputs.tag }}
-
+          build-args: api_version_tag=${{ needs.calculate_new_tag.outputs.tag }}
+          
   upload-to-server:
     needs: 
       - build_and_push_image
