--- a/Dockerfile-cts
+++ b/Dockerfile-cts
@@ -71,11 +71,9 @@ COPY --chown=${uid}:${uid} package*.json ./
 RUN npm install --only=production --omit=dev
 
 COPY --chown=${uid}:${uid} --from=build /node-app/dist/ .
-RUN echo "$project_management_version_tag" > NEW_TAG.txt 
+RUN echo "$project_management_version_tag" > project-management_version_tag.txt 
 
-# a file that contains the image version
-# COPY docker_image_version.txt /docker_image_version.txt
-# RUN cat docker_image_version.txt
+RUN cat project-management_version_tag.txt
 
 USER ${username}
 CMD ["node", "apps/project-management/main.js"]
